--- a/ford-weather-app/src/index.html
+++ b/ford-weather-app/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FordWeatherApp</title>
+  <title>Ford Weather Application</title>
+  <link rel="icon" type="image/vnd.microsoft.icon" href="./assets/favicon.ico"/>
+  <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="./assets/favicon.ico"/>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
